<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/tvConfirmarDatos"
        android:layout_width="@dimen/confirmardatoswidth"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/tvConfirmarDatos"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/confirmardatos"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        >
    </TextView>


    <TextView
        android:id="@+id/tvNombreIngresado"
        android:layout_width="@dimen/nombrewidth"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/tvNombreIngresado"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/nombreingresado"
        android:textStyle="bold"
        android:layout_below="@id/tvConfirmarDatos"
        android:layout_marginTop="40dp"
        >
    </TextView>


    <TextView
        android:id="@+id/tvFechaIngresado"
        android:layout_width="@dimen/nombrewidth"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/tvFechaIngresado"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/fechaingresado"
        android:textStyle="bold"
        android:layout_below="@id/tvNombreIngresado"
        android:layout_marginTop="40dp"
        >
    </TextView>


    <TextView
        android:id="@+id/tvTelefonoIngresado"
        android:layout_width="@dimen/nombrewidth"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tvNombreIngresado"
        android:text="@string/tvTelefonoIngresado"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/telefonoingresado"
        android:textStyle="bold"
        android:layout_below="@id/tvFechaIngresado"
        android:layout_marginTop="40dp"
        >
    </TextView>


    <TextView
        android:id="@+id/tvEmailIngresado"
        android:layout_width="@dimen/nombrewidth"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTelefonoIngresado"
        android:layout_alignLeft="@id/tvTelefonoIngresado"
        android:layout_marginTop="40dp"
        android:text="@string/tvEmailIngresado"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/telefonoingresado"
        android:textStyle="bold"
        >
    </TextView>


    <TextView
        android:id="@+id/tvDescripcionIngresado"
        android:layout_width="@dimen/nombrewidth"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tvEmailIngresado"
        android:text="@string/tvDescripcionIngresado"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/descripcioningresado"
        android:textStyle="bold"
        android:layout_below="@id/tvEmailIngresado"
        android:layout_marginTop="40dp"
        >
    </TextView>


    <Button
        android:id="@+id/botonEditar"
        android:layout_width="@dimen/botoneddatos"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvDescripcionIngresado"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/ButtonEditDatos"
        android:textColor="@color/blanco"
        android:textSize="@dimen/tbotoneddatos"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margintopbotonddatos"
        >
    </Button>


</RelativeLayout>